Added img alt text

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="row space-top space-bottom double">
             <div class="column">
               <div class="columns large-4 medium-4">
-                <img src="./static/roger.jpg" style="border-radius: 50%;border: 0 solid white;margin:0 auto;"/>
+                <img src="./static/roger.jpg" alt="Roger Ehmpke's photo" style="border-radius: 50%;border: 0 solid white;margin:0 auto;"/>
               </div>
               <div class="columns large-8 medium-8">
               <h2>Frontend Web Developer</h2>
