--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p style="color:#ffffff;">Contact me to discuss web development opportunities. I look forward to hearing from you!</p>
                 <form action="https://formspree.io/rehmpke@email.com" method="POST" style="max-width:420px;margin:0 auto;">
                   <label for="name">Name: <span class="required">*</span></label>
-                  <input type="text" name="name" placeholder="Name">
-                  <label for="_replyto">Email Address: <span class="required">*</span></label>
-                  <input type="email" name="_replyto" placeholder="Email">
+                  <input type="text" name="name" id="name" placeholder="Name">
+                  <label for="email">Email Address: <span class="required">*</span></label>
+                  <input type="email" name="_replyto" id="email" placeholder="Email">
                   <label for="message">Message: <span class="required">*</span></label>
-                  <textarea name="message" placeholder="Write a message"></textarea>
+                  <textarea name="message" id="message" placeholder="Write a message"></textarea>
                   <input type="submit" value="Send">
                 </form>
               </div>
