Clean old files and add a scss folder

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <!-- CSS  Get: http://www.google.com/fonts/
     http://stackoverflow.com/questions/7985081/how-to-deploy-a-jekyll-site-locally-with-css-js-and-background-images-included
     ================================================== -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700,800|Raleway:400,200,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
     <!-- Fount Awesome -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./static/styles.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/styles.css">
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-GSio8qamaXapM8Fq9JYdGNTvk/dgs+cMLgPeevOYEx0=" crossorigin="anonymous" /> -->
     <!-- Ah, the favicon.
     ================================================== -->
@@ -28,12 +28,10 @@
     <meta property="og:site_name" content=" - Roger Ehmpke"/>
     <meta property="og:url" content=" - https://www.rogerehmpke.com"/>
     <meta property="og:description" content="Roger Ehmpke, Web, Graphic and User Interface Designer"/>
-    <meta property="og:image" content=""/>
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@http://twitter.com/rehmpke">
     <meta name="twitter:title" content="Roger Ehmpke - Web, Graphic and User Interface Designer">
     <meta name="twitter:description" content="Roger Ehmpke, Web, Graphic and User Interface Designer">
-    <meta name="twitter:image" content="">
 
     <!-- modernizr
     ================================================== -->
@@ -97,7 +95,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="row space-top space-bottom double">
             <div class="column">
               <div class="columns large-4 medium-4">
-                <img src="./static/roger.jpg" alt="Roger Ehmpke's photo" style="border-radius: 50%;border: 0 solid white;margin:0 auto;"/>
+                <img src="./static/img/roger.jpg" alt="Roger Ehmpke's photo" style="border-radius: 50%;border: 0 solid white;margin:0 auto;"/>
               </div>
               <div class="columns large-8 medium-8">
               <h2>Frontend Web Developer</h2>
