Add basic browser sync and background image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Fount Awesome -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./static/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/style.css">
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-GSio8qamaXapM8Fq9JYdGNTvk/dgs+cMLgPeevOYEx0=" crossorigin="anonymous" /> -->
     <!-- Ah, the favicon.
     ================================================== -->
@@ -95,7 +95,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="row space-top space-bottom double">
             <div class="column">
               <div class="columns large-4 medium-4">
-                <img src="./static/img/roger.jpg" alt="Roger Ehmpke's photo" style="border-radius: 50%;border: 0 solid white;margin:0 auto;"/>
+                <img src="./static/img/roger.jpg" alt="Roger Ehmpke's photo" style="border-radius: 50%;border-width: 7px;border-style: solid;border-color: white;margin:0 auto;"/>
               </div>
               <div class="columns large-8 medium-8">
               <h2>Frontend Web Developer</h2>
