Modify col classes

--- a/index.html
+++ b/index.html
@@ -59,21 +59,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <header id="header" class="global-header">
       <div class="row">
-        <div class="small-12 columns">
-            <section class="right show-for-medium-up mam">
-                <ul class="inline-list">
-                    <li></li>
-                </ul>
-            </section>
-
-            <section class="right show-for-small">
-                <ul class="inline-list mam">
-                <li>
-                    <a class="right-off-canvas-toggle" href="#"><i class="fa fa-bars fa-lg">
-                    </i></a>
-                </li>
-                </ul>
-            </section>
+        <div class="col col-sm-12">
 
             <h1><a href="https://www.rogerehmpke.com" class="logo--header">Roger Ehmpke</a></h1>
 
@@ -81,63 +67,50 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </header>
 
-        <!-- Off Canvas Menu -->
-        <aside class="right-off-canvas-menu">
-            <!-- navigation list goes here -->
-            <ul class="off-canvas-list">
-              <li><a href="/">Home</a></li>
-            </ul>
-        </aside>
 
 
 
-
-        <section class="hero-shot">
+        <section class="hero-shot container-extended">
           <div class="row space-top space-bottom double">
-            <div class="column">
-              <div class="columns large-4 medium-4">
+              <div class="col col-lg-4 col-md-4">
                 <img src="./static/img/roger.jpg" alt="Roger Ehmpke's photo" style="border-radius: 50%;border-width: 7px;border-style: solid;border-color: white;margin:0 auto;"/>
               </div>
-              <div class="columns large-8 medium-8">
+              <div class="col large-8 medium-8">
               <h2>Frontend Web Developer</h2>
               <p>I am a web coordinator currently focusing on the field of frontend web development and JavaScript programming, React, and Redux. My current goal is to obtain either remote web development opportunities and/or part-time/contract employment as a frontend web application developer.</p>
               <p>For over 2 decades I have designed and built portal sites to address design problems. I manage sites in the education industry and have in the nutritional supplement industry as well. I strive to create usable and polished products through passionate and deliberate design.</p>
               <p>I live in Kankakee Illinois. I enjoy music, oil painting, and single malt whiskey.</p>
                 <p>Contact me or reach out via LinkedIn or send an email.</p>
               </div>
-            </div>
           </div>
         </section>
         <section id="why">
             <div class="container">
                 <div class="row space-top">
-                  <div class="column">
-                    <div class="columns large-12 text-center">
+                    <div class="col col-lg-12 text-center">
                         <h2 class="section-heading" style="color:#333333;">About</h2>
                         <hr class="primary">
                         <br>
                     </div>
-                  </div>
                 </div>
             </div>
             <div class="container">
                 <div class="row">
-                  <div class="column">
-                    <div class="columns large-4 medium-4 text-center">
+                    <div class="col-sm-12 col-lg-4 col-md-4 text-center">
                         <div class="service-box">
                             <i class="fa fa-4x fa-diamond wow bounceIn text-primary" style="color:#fdcc52;"></i>
                             <h3 style="color:#333333;">Ideas</h3>
                             <p class="text-muted">I collaborate with clients and peers to nurture and transform ideas into well thought out design specs. After all, that's where the majority of amazing user experiences start.</p>
                         </div>
                     </div>
-                    <div class="columns large-4 medium-4 text-center">
+                    <div class="col-sm-12 col-lg-4 col-md-4 text-center">
                         <div class="service-box">
                             <i class="fa fa-4x fa-magic wow bounceIn text-primary" style="color:#fdcc52;" data-wow-delay=".2s"></i>
                             <h3 style="color:#333333;">UX/UI</h3>
                             <p class="text-muted">I sketch and wireframe interfaces focusing on content structure, intuitive UI patterns and simple interactions. I'm a minimalist who truly believes that less is more.</p>
                         </div>
                     </div>
-                        <div class="columns large-4 medium-4 text-center">
+                        <div class="col-sm-12 col-lg-4 col-md-4 text-center">
                         <div class="service-box">
                             <i class="fa fa-4x fa-code wow bounceIn text-primary" style="color:#fdcc52;" data-wow-delay=".3s"></i>
                             <h3 style="color:#333333;">Code</h3>
@@ -152,10 +125,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
         <!--Mailing list additional information for the page-->
-        <aside class="mailing-list">
+        <aside class="mailing-list container-extended">
           <div class="row">
-            <div class="column">
-              <div class="columns text-center">
+              <div class="col text-center">
                 <h2>Contact</h2>
                 <p style="color:#ffffff;">Contact me to discuss web development opportunities. I look forward to hearing from you!</p>
                 <form action="https://formspree.io/rehmpke@email.com" method="POST" style="max-width:420px;margin:0 auto;">
@@ -175,7 +147,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <footer class="global-footer" role="contentinfo">
           <div class="footer-site-map">
             <div class="row">
-              <div class="medium-12 large-12 columns text-center"><a href="https://www.rogerehmpke.com" class="logo--footer">Roger Ehmpke</a>
+              <div class="col-md-12 col-lg-12 col text-center"><a href="https://www.rogerehmpke.com" class="logo--footer">Roger Ehmpke</a>
                 <p>Web, Graphic and User Interface Designer<a alt="Twitter @ rehmpke" href="http://twitter.com/rehmpke" class="social-sharing-icon white" style="color:rgb(29, 161, 242);"><i class="fa fa-twitter"></i></a>
                 <a alt="LinkedIn" href="https://www.linkedin.com/in/rogerehmpke" class="social-sharing-icon white" style="color:rgb(0, 119, 181)"><i class="fa fa-linkedin"></i></a></p>
                 <p>© 2018 <a href="https://www.rogerehmpke.com">Roger Ehmpke</a> | <span class="footer-copyright-links"><span class="footer-copyright-links"><a href="/contact-me">Contact Me</a></span></span></p>
@@ -187,16 +159,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
           <div class="footer-copyright">
             <div class="row">
-              <div class="column footer-copyright-links">
+              <div class="col footer-copyright-links">
 
               </div>
             </div>
           </div>
         </footer>
-
-
-      <!-- close the off-canvas menu -->
-      <a class="exit-off-canvas"></a>
 
       </div>
     </div>
