Add some different colors to the page

--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="row">
                     <div class="col-sm-12 col-lg-4 col-md-4 text-center">
                         <div class="service-box">
-                            <i class="fa fa-4x fa-diamond wow bounceIn text-primary" style="color:#fdcc52;"></i>
+                            <i class="fa fa-4x fa-diamond wow bounceIn" style="color:#3b4874;"></i>
                             <h3 style="color:#333333;">Ideas</h3>
                             <p class="text-muted">I collaborate with clients and peers to nurture and transform ideas into well thought out design specs. After all, that's where the majority of amazing user experiences start.</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-lg-4 col-md-4 text-center">
                         <div class="service-box">
-                            <i class="fa fa-4x fa-magic wow bounceIn text-primary" style="color:#fdcc52;" data-wow-delay=".2s"></i>
+                            <i class="fa fa-4x fa-magic wow bounceIn" style="color:#3b4874;" data-wow-delay=".2s"></i>
                             <h3 style="color:#333333;">UX/UI</h3>
                             <p class="text-muted">I sketch and wireframe interfaces focusing on content structure, intuitive UI patterns and simple interactions. I'm a minimalist who truly believes that less is more.</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-lg-4 col-md-4 text-center">
                         <div class="service-box">
-                            <i class="fa fa-4x fa-code wow bounceIn text-primary" style="color:#fdcc52;" data-wow-delay=".3s"></i>
+                            <i class="fa fa-4x fa-code wow bounceIn" style="color:#3b4874;" data-wow-delay=".3s"></i>
                             <h3 style="color:#333333;">Code</h3>
                             <p class="text-muted"> design in the browser with HTML(5), CSS(3) and a touch of JavaScript. I love coding things from scratch, but I can work with front-end frameworks like Bootstrap too.</p>
                         </div>
@@ -127,8 +127,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <aside class="mailing-list container-extended">
           <div class="row">
               <div class="col text-center">
-                <h2>Contact</h2>
-                <p style="color:#ffffff;">Contact me to discuss web development opportunities. I look forward to hearing from you!</p>
+                <h2 style="color:#333333;">Contact</h2>
+                <p style="color:#333333;">Contact me to discuss web development opportunities. I look forward to hearing from you!</p>
                 <form action="https://formspree.io/rehmpke@email.com" method="POST" style="max-width:420px;margin:0 auto;">
                   <label for="name">Name: <span class="required">*</span></label>
                   <input type="text" name="name" id="name" placeholder="Name">
