--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div data-alert class="alert-box alert radius" class="browsehappy">Please <a href="http://browsehappy.com/">upgrade your browser</a>. <a href="#" class="close">&times;</a></div>
         <![endif]-->
 
-    <header id="header" class="global-header">
+    <header id="header" class="global-header container">
       <div class="row">
         <div class="col col-sm-12">
 
@@ -71,9 +71,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
         <section class="hero-shot container-extended">
+          <div class="container">
           <div class="row space-top space-bottom double">
               <div class="col col-lg-4 col-md-4">
-                <img src="./static/img/roger.jpg" alt="Roger Ehmpke's photo" style="border-radius: 50%;border-width: 7px;border-style: solid;border-color: white;margin:0 auto;"/>
+                <img src="./static/img/roger.jpg" alt="Roger Ehmpke's photo" style="border-radius: 50%;border-width: 5px;border-style: solid;border-color: white;margin:0 auto;"/>
               </div>
               <div class="col large-8 medium-8">
               <h2>Frontend Web Developer</h2>
@@ -82,6 +83,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <p>I live in Kankakee Illinois. I enjoy music, oil painting, and single malt whiskey.</p>
                 <p>Contact me or reach out via LinkedIn or send an email.</p>
               </div>
+          </div>
           </div>
         </section>
         <section id="why">
@@ -130,13 +132,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h2 style="color:#333333;">Contact</h2>
                 <p style="color:#333333;">Contact me to discuss web development opportunities. I look forward to hearing from you!</p>
                 <form action="https://formspree.io/rehmpke@email.com" method="POST" style="max-width:420px;margin:0 auto;">
-                  <label for="name">Name: <span class="required">*</span></label>
+                   <div class="form-group">
+                   <label for="name">Name: <span class="required">*</span></label>
                   <input type="text" name="name" id="name" placeholder="Name">
+                  </div>
+                  <div class="form-group">
                   <label for="email">Email Address: <span class="required">*</span></label>
                   <input type="email" name="_replyto" id="email" placeholder="Email">
+                </div>
+                <div class="form-group">
                   <label for="message">Message: <span class="required">*</span></label>
                   <textarea name="message" id="message" placeholder="Write a message"></textarea>
-                  <input type="submit" value="Send">
+                  <input type="submit"  class="btn btn-primary" value="Send">
+                </div>
                 </form>
               </div>
             </div>
