Give links accessible aria-labels

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="footer-site-map">
             <div class="row">
               <div class="col-md-12 col-lg-12 col text-center"><a href="https://www.rogerehmpke.com" class="logo--footer">Roger Ehmpke</a>
-                <p>Web, Graphic and User Interface Designer<a alt="Twitter @ rehmpke" href="http://twitter.com/rehmpke" class="social-sharing-icon white" style="color:rgb(29, 161, 242);"><i class="fa fa-twitter"></i></a>
-                <a alt="LinkedIn" href="https://www.linkedin.com/in/rogerehmpke" class="social-sharing-icon white" style="color:rgb(0, 119, 181)"><i class="fa fa-linkedin"></i></a></p>
+                <p>Web, Graphic and User Interface Designer<a title="Twitter" aria-label="Twitter" href="http://twitter.com/rehmpke" class="social-sharing-icon white" style="color:rgb(29, 161, 242);"><i class="fa fa-twitter"></i></a>
+                <a title="LinkedIn" aria-label="LinkedIn" href="https://www.linkedin.com/in/rogerehmpke" class="social-sharing-icon white" style="color:rgb(0, 119, 181)"><i class="fa fa-linkedin"></i></a></p>
                 <p>© 2018 <a href="https://www.rogerehmpke.com">Roger Ehmpke</a> | <span class="footer-copyright-links"><span class="footer-copyright-links"><a href="/contact-me">Contact Me</a></span></span></p>
                 <ul class="inline-list">
                     <li></li>
