Update form text

--- a/index.html
+++ b/index.html
@@ -127,9 +127,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <aside class="mailing-list container-extended">
           <div class="row">
               <div class="col text-center">
-                <h2 style="color:#333333;">Contact</h2>
-                <p style="color:#333333;">Contact me to discuss web development opportunities. I look forward to hearing from you!</p>
                 <form action="https://formspree.io/rehmpke@email.com" method="POST" style="max-width:420px;margin:0 auto;">
+                  <div class="text-center mb-4">
+                  <h2 style="color:#333333;">Contact</h2>
+                  <p style="color:#333333;">Contact me to discuss web development opportunities. I look forward to hearing from you!</p>
+                  </div>
                   <label for="name">Name: <span class="required">*</span></label>
                   <input type="text" name="name" id="name" placeholder="Name">
                   <label for="email">Email Address: <span class="required">*</span></label>
