--- a/index.html
+++ b/index.html
@@ -128,21 +128,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!--Mailing list additional information for the page-->
         <aside class="mailing-list container-extended">
           <div class="row">
-              <div class="col text-center">
+              <div class="col">
                 <form action="https://formspree.io/rehmpke@email.com" method="POST" style="max-width:420px;margin:0 auto;">
+                  <div class="text-center mb-4">
+                  <h2 style="color:#333333;">Contact</h2>
+                  <p style="color:#333333;">Contact me to discuss web development opportunities. I look forward to hearing from you!</p>
+                </div>
                    <div class="form-group">
-                   <label for="name">Name: <span class="required">*</span></label>
-                  <input type="text" name="name" id="name" placeholder="Name">
+                  <input type="text" name="name" id="name" placeholder="Name" class="form-control" required>
+                  <label for="name">Name</label>
                   </div>
                   <div class="form-group">
-                  <label for="email">Email Address: <span class="required">*</span></label>
-                  <input type="email" name="_replyto" id="email" placeholder="Email">
+                  <input type="email" name="_replyto" id="email" placeholder="Email" class="form-control" required>
+                  <label for="email">Email Address</label>
                 </div>
                 <div class="form-group">
-                  <label for="message">Message: <span class="required">*</span></label>
-                  <textarea name="message" id="message" placeholder="Write a message"></textarea>
-                  <input type="submit"  class="btn btn-primary" value="Send">
+                  <textarea name="message" id="message" placeholder="Write a message" class="form-control"></textarea>
+                  <label for="message">Message</label>
                 </div>
+                <button type="submit"  class="btn btn-lg btn-primary btn-block">Send</button>
                 </form>
               </div>
             </div>
