--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-        <section class="hero-shot container-extended">
+        <section class="hero-shot container-fluid">
           <div class="container">
           <div class="row space-top space-bottom double">
               <div class="col col-lg-4 col-md-4">
                 <img src="./static/img/roger.jpg" alt="Roger Ehmpke's photo" style="border-radius: 50%;border-width: 5px;border-style: solid;border-color: white;margin:0 auto;"/>
               </div>
-              <div class="col large-8 medium-8">
+              <div class="col col-lg-8 col-med-8">
               <h2>Frontend Web Developer</h2>
               <p>I am a web coordinator currently focusing on the field of frontend web development and JavaScript programming, React, and Redux. My current goal is to obtain either remote web development opportunities and/or part-time/contract employment as a frontend web application developer.</p>
               <p>For over 2 decades I have designed and built portal sites to address design problems. I manage sites in the education industry and have in the nutritional supplement industry as well. I strive to create usable and polished products through passionate and deliberate design.</p>
