--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
         <!--Mailing list additional information for the page-->
-        <aside class="mailing-list container-extended">
+        <aside class="mailing-list container-fluid">
           <div class="row">
               <div class="col">
-                <form action="https://formspree.io/rehmpke@gmail.com" method="POST" style="max-width:420px;margin:0 auto;">
+                <form action="https://formspree.io/rehmpke@gmail.com" method="POST" style="margin:0 auto;">
                   <div class="text-center mb-4">
                   <h2 style="color:#333333;">Contact</h2>
                   <p style="color:#333333;">Contact me to discuss web development opportunities. I look forward to hearing from you!</p>
