Center contact form

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <!--Mailing list additional information for the page-->
         <aside class="mailing-list container-fluid">
-          <div class="row">
-              <div class="col col-lg-4 col-md-4">
+          <div class="row align-items-center justify-content-center">
+              <div class="col-lg-4 col-md-4">
                 <form action="https://formspree.io/rehmpke@gmail.com" method="POST" style="margin:0 auto;">
                   <div class="text-center mb-4">
                   <h2 style="color:#333333;">Contact</h2>
