Add Codepen to links in footer

--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="col-md-12 col-lg-12 col text-center"><a href="https://www.rogerehmpke.com" class="logo--footer">Roger Ehmpke</a>
                 <p><a title="Twitter" aria-label="Twitter" href="http://twitter.com/rehmpke" class="social-sharing-icon white" style="color:rgb(29, 161, 242);"><i class="fa fa-twitter"></i></a>
                   <a title="Github" aria-label="Github" href="https://github.com/rehmpke" class="social-sharing-icon white" style="color:rgb(0, 119, 181)"><i class="fa fa-github"></i></a>
-                <a title="LinkedIn" aria-label="LinkedIn" href="https://www.linkedin.com/in/rogerehmpke" class="social-sharing-icon white" style="color:rgb(0, 119, 181)"><i class="fa fa-linkedin"></i></a></p>
+                <a title="LinkedIn" aria-label="LinkedIn" href="https://www.linkedin.com/in/rogerehmpke" class="social-sharing-icon white" style="color:rgb(0, 119, 181)"><i class="fa fa-linkedin"></i></a>
+              <a title="Codepen" aria-label="Codepen" href="https://codepen.io/rehmpke/" class="social-sharing-icon white" style="color:rgb(0, 119, 181)"><i class="fa fa-codepen"></i></a></p>
                 <p>© 2018 <a href="https://www.rogerehmpke.com">Roger Ehmpke</a></p>
               </div>
             </div>
