--- a/index.html
+++ b/index.html
@@ -123,6 +123,36 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </section>
 
+        <section id="recomendations">
+            <div class="container">
+                <div class="row space-top">
+                    <div class="col col-lg-12 text-center">
+                        <h2 class="section-heading" style="color:#333333;">Recomendations</h2>
+                        <hr class="primary">
+                        <br>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-lg-4 col-md-4 text-center">
+                        <div class="testimonial-box">
+                            <h3 style="color:#333333;">Lisa M. Wogan</h3>
+                            <p class="text-muted">Economic Development Professional
+                            We came to Roger with a laundry list of needs for a new website. He applied his deep experience in the field, ready familiarity with current solutions and a methodical approach to produce a site that meets, even exceeds, all of our needs. He identified, and proactively addressed, potential system bottlenecks, building a site that is highly functional as well as adaptable. I look forward to working with River Valley Websites on other development projects.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-lg-4 col-md-4 text-center">
+                        <div class="service-box">
+                            <i class="fa fa-4x fa-magic wow bounceIn" style="color:#3b4874;" data-wow-delay=".2s"></i>
+                            <h3 style="color:#333333;">Ron Sattar</h3>
+                            <p class="text-muted">Business and IT Consultant / Sattar Group
+                              Great working with Roger on various projects.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
         <!--Mailing list additional information for the page-->
