Clean up boldness in role of testimonial

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="row space-bottom">
                     <div class="col-sm-12 col-lg-12 col-md-12 text-center">
                         <div class="testimonial-box">
-                            <h3 style="color:#333333;">Lisa M. Wogan<br><span style="font-weight:bold;">Economic Development Professional</span></h3>
+                            <h3 style="color:#333333;">Lisa M. Wogan<br><span style="font-weight: normal;font-size: 1.3rem;">Economic Development Professional</span></h3>
                             <p class="text-muted">
                             We came to Roger with a laundry list of needs for a new website. He applied his deep experience in the field, ready familiarity with current solutions and a methodical approach to produce a site that meets, even exceeds, all of our needs. He identified, and proactively addressed, potential system bottlenecks, building a site that is highly functional as well as adaptable. I look forward to working with River Valley Websites on other development projects.</p>
                         </div>
@@ -145,7 +145,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <br>
                     <div class="col-sm-12 col-lg-12 col-md-12 text-center">
                         <div class="service-box">
-                            <h3 style="color:#333333;">Ron Sattar<br><span style="font-weight:bold;">Business and IT Consultant / Sattar Group</span></h3>
+                            <h3 style="color:#333333;">Ron Sattar<br><span style="font-weight: normal;font-size: 1.3rem;">Business and IT Consultant / Sattar Group</span></h3>
                             <p class="text-muted">
                     Great working with Roger on various projects.</p>
                         </div>
