Image layout me fix

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="container">
           <div class="row space-top space-bottom double">
               <div class="col col-lg-4 col-md-4">
-                <img src="./static/img/roger.jpg" alt="Roger Ehmpke's photo" style="border-radius: 50%;border-width: 5px;border-style: solid;border-color: white;margin:0 auto;"/>
+                <img class="text-center img-fluid" src="./static/img/roger.jpg" alt="Roger Ehmpke's photo" style="border-radius: 50%;border-width: 5px;border-style: solid;border-color: white;margin:0 auto;"/>
               </div>
               <div class="col col-lg-8 col-med-8">
               <h2>Frontend Web Developer</h2>
