Made image fluid and fixed some more cols

--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <header id="header" class="global-header container">
       <div class="row">
-        <div class="col col-sm-12">
-
+        <div class="col">
             <h1><a href="https://www.rogerehmpke.com" class="logo--header">Roger Ehmpke</a></h1>
-
         </div>
         </div>
     </header>
@@ -89,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <section id="why">
             <div class="container">
                 <div class="row space-top">
-                    <div class="col col-lg-12 text-center">
+                    <div class="col text-center">
                         <h2 class="section-heading" style="color:#333333;">About</h2>
                         <hr class="primary">
                         <br>
@@ -126,7 +124,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <section id="recomendations">
             <div class="container">
                 <div class="row space-top">
-                    <div class="col col-lg-12 text-center">
+                    <div class="col text-center">
                         <h2 class="section-heading" style="color:#333333;">Recomendations</h2>
                         <hr class="primary">
                         <br>
