Modified social icons to red

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <br>
                     <div class="col-sm-12 col-lg-12 col-md-12 text-center">
                         <div class="service-box">
-                            <h3 style="color:#333333;">Ron Sattar<br><span style="font-weight: normal;font-size: 1.3rem;">Business and IT Consultant / Sattar Group</span></h3>
+                            <h3 style="color:#333333;">Ron Sattar<br><span style="font-weight: normal;font-size: 1.3rem;">Business and IT Consultant / Sattar&nbsp;Group</span></h3>
                             <p class="text-muted">
                     Great working with Roger on various projects.</p>
                         </div>
@@ -184,10 +184,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="footer-site-map">
             <div class="row">
               <div class="col-md-12 col-lg-12 col text-center"><a href="https://www.rogerehmpke.com" class="logo--footer">Roger Ehmpke</a>
-                <p><a title="Twitter" aria-label="Twitter" href="http://twitter.com/rehmpke" class="social-sharing-icon white" style="color:rgb(0, 119, 181);"><i class="fa fa-twitter"></i></a>
-                  <a title="Github" aria-label="Github" href="https://github.com/rehmpke" class="social-sharing-icon white" style="color:rgb(0, 119, 181)"><i class="fa fa-github"></i></a>
-                <a title="LinkedIn" aria-label="LinkedIn" href="https://www.linkedin.com/in/rogerehmpke" class="social-sharing-icon white" style="color:rgb(0, 119, 181)"><i class="fa fa-linkedin"></i></a>
-              <a title="Codepen" aria-label="Codepen" href="https://codepen.io/rehmpke/" class="social-sharing-icon white" style="color:rgb(0, 119, 181)"><i class="fa fa-codepen"></i></a></p>
+                <p><a title="Twitter" aria-label="Twitter" href="http://twitter.com/rehmpke" class="social-sharing-icon white" style="color:#d32734;"><i class="fa fa-twitter"></i></a>
+                  <a title="Github" aria-label="Github" href="https://github.com/rehmpke" class="social-sharing-icon white" style="color:#d32734;"><i class="fa fa-github"></i></a>
+                <a title="LinkedIn" aria-label="LinkedIn" href="https://www.linkedin.com/in/rogerehmpke" class="social-sharing-icon white" style="color:#d32734;"><i class="fa fa-linkedin"></i></a>
+              <a title="Codepen" aria-label="Codepen" href="https://codepen.io/rehmpke/" class="social-sharing-icon white" style="color:#d32734;"><i class="fa fa-codepen"></i></a></p>
                 <p>© 2018 <a href="https://www.rogerehmpke.com">Roger Ehmpke</a></p>
               </div>
             </div>
