Add space to top of footer

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <footer class="global-footer" role="contentinfo">
           <div class="footer-site-map">
-            <div class="row">
+            <div class="row space-top">
               <div class="col-md-12 col-lg-12 col text-center">
                 <p><a title="Twitter" aria-label="Twitter" href="http://twitter.com/rehmpke" class="social-sharing-icon white" style="color:#813a59;"><i class="fa fa-twitter"></i></a>
                   <a title="Github" aria-label="Github" href="https://github.com/rehmpke" class="social-sharing-icon white" style="color:#813a59;"><i class="fa fa-github"></i></a>
