--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Ah, the favicon.
     ================================================== -->
     <link rel="shortcut icon" href="favicon.ico">
-
+    <link rel="manifest" href="manifest.json">
     <!-- Open Graph: https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content/
     Twitter: https://dev.twitter.com/docs/cards/types/summary-card
     ============================== -->
@@ -71,8 +71,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <section class="hero-shot container-fluid">
           <div class="container">
           <div class="row space-top space-bottom double">
-              <div class="col-md-4">
-                <img class="text-center img-fluid" src="./static/img/roger.jpg" alt="Roger Ehmpke's photo" style="border-radius: 50%;border-width: 5px;border-style: solid;border-color: white;margin:0 auto;"/>
+              <div class="text-center col-md-4">
+                <img class="img-fluid" src="./static/img/roger.jpg" alt="Roger Ehmpke's photo" style="border-radius: 50%;border-width: 5px;border-style: solid;border-color: white;margin:0 auto;"/>
               </div>
               <div class="col-md-8">
               <h2>Frontend Web Developer</h2>
