Testing manifest.json name change and add .static folder sl

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Ah, the favicon.
     ================================================== -->
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="./static/manifest.json">
     <!-- Open Graph: https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content/
     Twitter: https://dev.twitter.com/docs/cards/types/summary-card
     ============================== -->
