Add theme color to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Roger Ehmpke, Web, Graphic and User Interface Designer" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="Roger Ehmpke, Web, Web Developer, UI, Front End Developer, Web Designer" />
+    <meta name="theme-color" content="#3b4874"/>
     <!-- Bootstrap 4 Beta stylesheet CDN link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <!-- CSS  Get: http://www.google.com/fonts/
