--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Roger Ehmpke - Web, Graphic and User Interface Designer - Roger Ehmpke</title>
-    <meta name="description" content="Roger Ehmpke, Web, Graphic and User Interface Designer" />
+    <title>Roger Ehmpke - Frontend Web Developer - Roger Ehmpke</title>
+    <meta name="description" content="Roger Ehmpke, Frontend Web Developer" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="Roger Ehmpke, Web, Web Developer, UI, Front End Developer, Web Designer" />
     <meta name="theme-color" content="#3b4874"/>
