Add manifest icons sized

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <!-- Open Graph: https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content/
     Twitter: https://dev.twitter.com/docs/cards/types/summary-card
     ============================== -->
-    <meta property="og:title" content="Roger Ehmpke - Web, Graphic and User Interface Designer"/>
+    <meta property="og:title" content="Roger Ehmpke - Frontend Web Developer"/>
     <meta property="og:site_name" content=" - Roger Ehmpke"/>
     <meta property="og:url" content=" - https://www.rogerehmpke.com"/>
-    <meta property="og:description" content="Roger Ehmpke, Web, Graphic and User Interface Designer"/>
+    <meta property="og:description" content="Roger Ehmpke, Frontend Web Developer"/>
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@http://twitter.com/rehmpke">
-    <meta name="twitter:title" content="Roger Ehmpke - Web, Graphic and User Interface Designer">
-    <meta name="twitter:description" content="Roger Ehmpke, Web, Graphic and User Interface Designer">
+    <meta name="twitter:title" content="Roger Ehmpke - Frontend Web Developer">
+    <meta name="twitter:description" content="Roger Ehmpke, Frontend Web Developer">
 
     <!-- modernizr
     ================================================== -->
