--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
-    <!-- Fount Awesome -->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="./static/css/style.css">
 
@@ -90,21 +88,44 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="row">
                     <div class="col-sm-12 col-lg-4 col-md-4 text-center">
                         <div class="service-box">
-                            <i class="fa fa-4x fa-diamond wow bounceIn" style="color:#3b4874;"></i>
+                          <svg version="1.1" id="Diamond" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                            y="0px" viewBox="0 0 40 40" height="66" width="66" class="wow bounceIn" data-wow-delay=".1s" style="enable-background:new 0 0 40 40;color:#3b4874;">
+                            <path d="M4.3,16.3l12,12.8l-5.8-12.8H4.3z M20,31.2l6.7-14.9H13.3L20,31.2z M10.6,13.8l3.9-7.4H9.5L4,13.8H10.6z M23.6,29.1l12-12.8
+                          	h-6.2L23.6,29.1z M13.4,13.8h13.2l-3.9-7.4h-5.3L13.4,13.8z M29.4,13.8H36l-5.6-7.4h-5.1L29.4,13.8z M32.1,4.5l7.4,9.9
+                          	c0.2,0.2,0.3,0.5,0.3,0.8c0,0.3-0.1,0.6-0.3,0.8L20.9,35.7C20.7,35.9,20.4,36,20,36s-0.7-0.1-0.9-0.4L0.6,15.9
+                          	c-0.2-0.2-0.3-0.5-0.3-0.8c0-0.3,0.1-0.6,0.3-0.8l7.4-9.9C8.1,4.1,8.5,4,8.9,4h22.2C31.5,4,31.9,4.1,32.1,4.5z" />
+                          </svg>
                             <h3 style="color:#333333;">Ideas</h3>
                             <p class="text-muted">I collaborate with clients and peers to nurture and transform ideas into well thought out design specs. After all, that's where the majority of amazing user experiences start.</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-lg-4 col-md-4 text-center">
                         <div class="service-box">
-                            <i class="fa fa-4x fa-magic wow bounceIn" style="color:#3b4874;" data-wow-delay=".2s"></i>
+                            <svg version="1.1" id="Magic" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                              y="0px" viewBox="0 0 40 40" height="66" width="66" class="wow bounceIn" data-wow-delay=".1s" style="enable-background:new 0 0 40 40;color:#3b4874;" xml:space="preserve">
+                              <path d="M28.3,14.3l7.1-7.1l-2.6-2.6l-7.1,7.1L28.3,14.3z M39.1,7.2c0,0.4-0.1,0.8-0.4,1.1l-31,31c-0.3,0.3-0.7,0.4-1.1,0.4
+                            	c-0.4,0-0.8-0.1-1.1-0.4l-4.8-4.8c-0.3-0.3-0.4-0.7-0.4-1.1s0.1-0.8,0.4-1.1l31-31c0.3-0.3,0.7-0.4,1.1-0.4c0.4,0,0.8,0.1,1.1,0.4
+                            	l4.8,4.8C38.9,6.4,39.1,6.8,39.1,7.2z M6.5,2.7l2.4,0.7L6.5,4.1L5.8,6.5L5,4.1L2.7,3.4L5,2.7l0.7-2.4L6.5,2.7z M14.9,6.6L19.7,8
+                            	l-4.7,1.4l-1.4,4.7L12,9.5L7.3,8L12,6.6l1.4-4.7L14.9,6.6z M37.3,18.1l2.4,0.7l-2.4,0.7l-0.7,2.4l-0.7-2.4l-2.4-0.7l2.4-0.7l0.7-2.4
+                            	L37.3,18.1z M21.9,2.7l2.4,0.7l-2.4,0.7l-0.7,2.4l-0.7-2.4l-2.4-0.7l2.4-0.7l0.7-2.4L21.9,2.7z" />
+                            </svg>
+
                             <h3 style="color:#333333;">UX/UI</h3>
                             <p class="text-muted">I sketch and wireframe interfaces focusing on content structure, intuitive UI patterns and simple interactions. I'm a minimalist who truly believes that less is more.</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-lg-4 col-md-4 text-center">
                         <div class="service-box">
-                            <i class="fa fa-4x fa-code wow bounceIn" style="color:#3b4874;" data-wow-delay=".3s"></i>
+                            <svg version="1.1" id="Code" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                              y="0px" viewBox="0 0 40 40" height="66" width="66" class="wow bounceIn" data-wow-delay=".1s" style="enable-background:new 0 0 40 40;color:#3b4874;" xml:space="preserve">
+                              <path d="M12.6,29.5l-1.1,1.1c-0.1,0.1-0.3,0.2-0.5,0.2s-0.4-0.1-0.5-0.2l-10-10c-0.1-0.1-0.2-0.3-0.2-0.5c0-0.2,0.1-0.4,0.2-0.5
+                            	l10-10c0.1-0.1,0.3-0.2,0.5-0.2s0.4,0.1,0.5,0.2l1.1,1.1c0.1,0.1,0.2,0.3,0.2,0.5c0,0.2-0.1,0.4-0.2,0.5L4.1,20l8.5,8.5
+                            	c0.1,0.1,0.2,0.3,0.2,0.5S12.8,29.3,12.6,29.5z M25.3,6.5l-8,27.8c-0.1,0.2-0.2,0.3-0.3,0.4s-0.3,0.1-0.5,0.1l-1.3-0.4
+                            	c-0.2-0.1-0.3-0.2-0.4-0.3c-0.1-0.2-0.1-0.3-0.1-0.5l8-27.8c0.1-0.2,0.2-0.3,0.3-0.4s0.3-0.1,0.5-0.1l1.3,0.4
+                            	c0.2,0.1,0.3,0.2,0.4,0.3C25.4,6.1,25.4,6.3,25.3,6.5z M39.5,20.5l-10,10c-0.1,0.1-0.3,0.2-0.5,0.2s-0.4-0.1-0.5-0.2l-1.1-1.1
+                            	c-0.1-0.1-0.2-0.3-0.2-0.5s0.1-0.4,0.2-0.5l8.5-8.5l-8.5-8.5c-0.1-0.1-0.2-0.3-0.2-0.5c0-0.2,0.1-0.4,0.2-0.5l1.1-1.1
+                            	c0.1-0.1,0.3-0.2,0.5-0.2s0.4,0.1,0.5,0.2l10,10c0.1,0.1,0.2,0.3,0.2,0.5C39.7,20.2,39.6,20.4,39.5,20.5z" />
+                            </svg>
                             <h3 style="color:#333333;">Code</h3>
                             <p class="text-muted"> design in the browser with HTML(5), CSS(3) and a touch of JavaScript. I love coding things from scratch, but I can work with front-end frameworks like Bootstrap too.</p>
                         </div>
@@ -176,10 +197,56 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="footer-site-map">
             <div class="row space-top">
               <div class="col-md-12 col-lg-12 col text-center">
-                <p><a title="Twitter" aria-label="Twitter" href="http://twitter.com/rehmpke" class="social-sharing-icon white" style=""><i class="fa fa-twitter"></i></a>
-                  <a title="Github" aria-label="Github" href="https://github.com/rehmpke" class="social-sharing-icon white" style=""><i class="fa fa-github"></i></a>
-                <a title="LinkedIn" aria-label="LinkedIn" href="https://www.linkedin.com/in/rogerehmpke" class="social-sharing-icon white" style=""><i class="fa fa-linkedin"></i></a>
-              <a title="Codepen" aria-label="Codepen" href="https://codepen.io/rehmpke/" class="social-sharing-icon white" style=""><i class="fa fa-codepen"></i></a></p>
+                <p><a title="Twitter" aria-label="Twitter" href="http://twitter.com/rehmpke" class="" style=""><svg version="1.1" id="Twitter" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                  y="0px" viewBox="0 0 40 40" height="30" width="30" style="enable-background:new 0 0 40 40;" xml:space="preserve">
+                  <path d="M39.8,7.8c-1.1,1.6-2.5,3-4.1,4.2c0,0.2,0,0.6,0,1.1c0,2.2-0.3,4.3-1,6.5c-0.6,2.2-1.6,4.2-2.9,6.2S29,29.5,27.2,31
+                	c-1.8,1.5-3.9,2.7-6.5,3.7c-2.5,0.9-5.2,1.4-8.1,1.4C8.2,36,4,34.8,0.2,32.4c0.6,0.1,1.2,0.1,2,0.1c3.8,0,7.1-1.2,10.1-3.5
+                	c-1.8,0-3.3-0.6-4.7-1.6c-1.4-1-2.3-2.4-2.9-4c0.6,0.1,1.1,0.1,1.5,0.1c0.7,0,1.4-0.1,2.1-0.3c-1.9-0.4-3.4-1.3-4.6-2.8
+                	c-1.2-1.5-1.8-3.2-1.8-5.2v-0.1c1.1,0.6,2.4,1,3.7,1c-1.1-0.7-2-1.7-2.6-2.9s-1-2.5-1-3.9c0-1.5,0.4-2.8,1.1-4.1
+                	c2,2.5,4.5,4.5,7.4,6s6,2.3,9.3,2.5c-0.1-0.6-0.2-1.3-0.2-1.9c0-2.2,0.8-4.1,2.4-5.7C23.4,4.7,25.4,4,27.6,4c2.3,0,4.3,0.9,5.9,2.6
+                	c1.8-0.4,3.5-1,5.1-2C38,6.5,36.8,8,35.1,9C36.6,8.9,38.2,8.4,39.8,7.8z" />
+                </svg>
+</a>
+                  <a title="Github" aria-label="Github" href="https://github.com/rehmpke" class="" style=""><svg version="1.1" id="Github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                    y="0px" viewBox="0 0 40 40" height="30" width="30" style="enable-background:new 0 0 40 40;" xml:space="preserve">
+                    <path d="M20,0.7c3.6,0,6.9,0.9,9.9,2.6s5.4,4.2,7.2,7.2c1.8,3,2.6,6.3,2.6,9.9c0,4.3-1.3,8.2-3.8,11.6c-2.5,3.4-5.8,5.8-9.7,7.1
+                  	c-0.5,0.1-0.8,0-1-0.2c-0.2-0.2-0.3-0.5-0.3-0.8c0-0.1,0-0.7,0-2c0-1.3,0-2.4,0-3.5c0-1.7-0.4-2.9-1.3-3.7c1-0.1,1.9-0.3,2.6-0.5
+                  	s1.6-0.5,2.4-1s1.5-1,2.1-1.7s1-1.6,1.4-2.7c0.4-1.1,0.5-2.4,0.5-3.9c0-2-0.7-3.8-2-5.3c0.6-1.6,0.6-3.3-0.2-5.2
+                  	c-0.5-0.2-1.2-0.1-2.1,0.3s-1.7,0.7-2.4,1.1l-1,0.6c-1.6-0.4-3.2-0.7-4.9-0.7s-3.3,0.2-4.9,0.7c-0.3-0.2-0.6-0.4-1.1-0.7
+                  	s-1.2-0.6-2.1-1s-1.7-0.5-2.2-0.3c-0.8,1.9-0.8,3.7-0.2,5.2c-1.4,1.5-2,3.3-2,5.3c0,1.5,0.2,2.7,0.5,3.9c0.4,1.1,0.8,2,1.4,2.7
+                  	c0.5,0.7,1.2,1.3,2.1,1.7c0.8,0.5,1.6,0.8,2.4,1s1.7,0.4,2.6,0.5c-0.7,0.6-1.1,1.5-1.3,2.6c-0.4,0.2-0.7,0.3-1.2,0.4
+                  	c-0.4,0.1-0.9,0.1-1.5,0.1s-1.1-0.2-1.7-0.6c-0.6-0.4-1-0.9-1.4-1.6c-0.3-0.5-0.7-1-1.2-1.3c-0.5-0.3-0.9-0.5-1.3-0.6l-0.5-0.1
+                  	c-0.4,0-0.6,0-0.7,0.1c-0.1,0.1-0.2,0.2-0.1,0.3c0.1,0.1,0.1,0.2,0.2,0.4c0.1,0.1,0.2,0.2,0.3,0.3l0.2,0.1c0.4,0.2,0.8,0.5,1.1,1
+                  	c0.4,0.5,0.6,0.9,0.8,1.3l0.3,0.6c0.2,0.7,0.6,1.2,1.1,1.6c0.5,0.4,1.1,0.7,1.7,0.8c0.6,0.1,1.2,0.2,1.8,0.2c0.6,0,1.1,0,1.4-0.1
+                  	l0.6-0.1c0,0.7,0,1.4,0,2.3s0,1.3,0,1.4c0,0.3-0.1,0.6-0.3,0.8c-0.2,0.2-0.6,0.3-1,0.2c-4-1.3-7.2-3.7-9.7-7.1s-3.8-7.3-3.8-11.6
+                  	c0-3.6,0.9-6.9,2.6-9.9s4.2-5.4,7.2-7.2S16.4,0.7,20,0.7z M7.7,29.1c0.1-0.1,0-0.2-0.2-0.3c-0.2-0.1-0.3,0-0.3,0.1
+                  	c-0.1,0.1,0,0.2,0.2,0.3C7.6,29.3,7.7,29.2,7.7,29.1z M8.5,30c0.1-0.1,0.1-0.2-0.1-0.4c-0.2-0.2-0.3-0.2-0.4-0.1
+                  	c-0.1,0.1-0.1,0.2,0.1,0.4C8.3,30.1,8.4,30.1,8.5,30z M9.3,31.1c0.2-0.1,0.2-0.3,0-0.5c-0.1-0.2-0.3-0.3-0.4-0.2
+                  	c-0.2,0.1-0.2,0.2,0,0.5C9,31.2,9.2,31.2,9.3,31.1z M10.4,32.2c0.1-0.1,0.1-0.3-0.1-0.5c-0.2-0.2-0.4-0.2-0.5-0.1
+                  	c-0.2,0.1-0.1,0.3,0.1,0.5C10.1,32.3,10.2,32.4,10.4,32.2z M11.8,32.9c0.1-0.2-0.1-0.3-0.3-0.4c-0.3-0.1-0.4,0-0.5,0.2
+                  	c-0.1,0.2,0,0.3,0.3,0.4C11.6,33.1,11.8,33.1,11.8,32.9z M13.5,33c0-0.2-0.1-0.3-0.4-0.3c-0.3,0-0.4,0.1-0.4,0.3
+                  	c0,0.2,0.1,0.3,0.4,0.3C13.3,33.3,13.5,33.2,13.5,33z M15,32.7c0-0.2-0.2-0.3-0.5-0.2c-0.3,0.1-0.4,0.2-0.4,0.4
+                  	c0,0.2,0.2,0.3,0.5,0.2C14.9,33,15,32.9,15,32.7z" />
+                  </svg>
+</a>
+                <a title="LinkedIn" aria-label="LinkedIn" href="https://www.linkedin.com/in/rogerehmpke" class="" style=""><svg version="1.1" id="Linked_in" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                  y="0px" viewBox="0 0 40 40" height="30" width="30" style="enable-background:new 0 0 40 40;" xml:space="preserve">
+                  <path d="M9.2,13.4v25.5H0.7V13.4H9.2z M9.8,5.5c0,1.3-0.4,2.3-1.3,3.1S6.4,9.9,5,9.9H4.9c-1.4,0-2.5-0.4-3.4-1.3S0.2,6.8,0.2,5.5
+                	c0-1.3,0.4-2.3,1.3-3.2s2-1.2,3.5-1.2s2.6,0.4,3.4,1.2S9.7,4.3,9.8,5.5z M39.8,24.3v14.6h-8.5V25.2c0-1.8-0.3-3.2-1-4.2
+                	c-0.7-1-1.8-1.5-3.3-1.5c-1.1,0-2,0.3-2.7,0.9c-0.7,0.6-1.3,1.3-1.6,2.2c-0.2,0.5-0.3,1.2-0.3,2.1v14.2h-8.5
+                	c0-6.8,0.1-12.4,0.1-16.6s0-6.8,0-7.6l0-1.2h8.5v3.7h-0.1c0.3-0.5,0.7-1,1.1-1.4c0.4-0.4,0.8-0.9,1.5-1.3c0.6-0.5,1.4-0.9,2.2-1.1
+                	c0.9-0.3,1.9-0.4,2.9-0.4c2.9,0,5.3,1,7.1,2.9C38.9,17.7,39.8,20.5,39.8,24.3z" />
+                </svg>
+</a>
+              <a title="Codepen" aria-label="Codepen" href="https://codepen.io/rehmpke/" class="" style="">
+                <svg version="1.1" id="Codepen" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="30" width="30" x="0px"
+                  y="0px" viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;" xml:space="preserve">
+                  <path d="M5,26l13.3,8.9V27L10.9,22L5,26z M3.6,22.8L7.9,20l-4.3-2.8V22.8z M21.7,34.9L35,26l-5.9-4L21.7,27V34.9z M20,24l6-4l-6-4
+                	l-6,4L20,24z M10.9,18l7.4-4.9V5.1L5,14L10.9,18z M32.1,20l4.3,2.8v-5.7L32.1,20z M29.1,18l5.9-4L21.7,5.1V13L29.1,18z M39.8,14v12
+                	c0,0.6-0.2,1.1-0.7,1.4l-18.1,12c-0.3,0.2-0.6,0.3-0.9,0.3s-0.6-0.1-0.9-0.3L1,27.4c-0.5-0.3-0.7-0.8-0.7-1.4V14
+                	c0-0.6,0.2-1.1,0.7-1.4l18.1-12c0.3-0.2,0.6-0.3,0.9-0.3s0.6,0.1,0.9,0.3l18.1,12C39.5,12.9,39.8,13.4,39.8,14z" />
+                </svg>
+</a></p>
                 <p>© 2019 <a href="https://www.rogerehmpke.com">Roger Ehmpke</a></p>
               </div>
             </div>
