--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="col-sm-12 col-lg-4 col-md-4 text-center">
                         <div class="service-box">
                           <svg version="1.1" id="Diamond" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-                            y="0px" viewBox="0 0 40 40" height="66" width="66" class="service-icon wow bounceIn" data-wow-delay=".1s" style="enable-background:new 0 0 40 40;color:#3b4874;">
+                            y="0px" viewBox="0 0 40 40" class="service-icon wow bounceIn" data-wow-delay=".1s" style="enable-background:new 0 0 40 40;">
                             <path d="M4.3,16.3l12,12.8l-5.8-12.8H4.3z M20,31.2l6.7-14.9H13.3L20,31.2z M10.6,13.8l3.9-7.4H9.5L4,13.8H10.6z M23.6,29.1l12-12.8
                           	h-6.2L23.6,29.1z M13.4,13.8h13.2l-3.9-7.4h-5.3L13.4,13.8z M29.4,13.8H36l-5.6-7.4h-5.1L29.4,13.8z M32.1,4.5l7.4,9.9
                           	c0.2,0.2,0.3,0.5,0.3,0.8c0,0.3-0.1,0.6-0.3,0.8L20.9,35.7C20.7,35.9,20.4,36,20,36s-0.7-0.1-0.9-0.4L0.6,15.9
@@ -102,7 +102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="col-sm-12 col-lg-4 col-md-4 text-center">
                         <div class="service-box">
                             <svg version="1.1" id="Magic" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-                              y="0px" viewBox="0 0 40 40" height="66" width="66" class="service-icon wow bounceIn" data-wow-delay=".1s" style="enable-background:new 0 0 40 40;color:#3b4874;" xml:space="preserve">
+                              y="0px" viewBox="0 0 40 40" class="service-icon wow bounceIn" data-wow-delay=".1s" style="enable-background:new 0 0 40 40;" xml:space="preserve">
                               <path d="M28.3,14.3l7.1-7.1l-2.6-2.6l-7.1,7.1L28.3,14.3z M39.1,7.2c0,0.4-0.1,0.8-0.4,1.1l-31,31c-0.3,0.3-0.7,0.4-1.1,0.4
                             	c-0.4,0-0.8-0.1-1.1-0.4l-4.8-4.8c-0.3-0.3-0.4-0.7-0.4-1.1s0.1-0.8,0.4-1.1l31-31c0.3-0.3,0.7-0.4,1.1-0.4c0.4,0,0.8,0.1,1.1,0.4
                             	l4.8,4.8C38.9,6.4,39.1,6.8,39.1,7.2z M6.5,2.7l2.4,0.7L6.5,4.1L5.8,6.5L5,4.1L2.7,3.4L5,2.7l0.7-2.4L6.5,2.7z M14.9,6.6L19.7,8
@@ -117,7 +117,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="col-sm-12 col-lg-4 col-md-4 text-center">
                         <div class="service-box">
                             <svg version="1.1" id="Code" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-                              y="0px" viewBox="0 0 40 40" height="66" width="66" class="service-icon wow bounceIn" data-wow-delay=".1s" style="enable-background:new 0 0 40 40;color:#3b4874;" xml:space="preserve">
+                              y="0px" viewBox="0 0 40 40" class="service-icon wow bounceIn" data-wow-delay=".1s" style="enable-background:new 0 0 40 40;" xml:space="preserve">
                               <path d="M12.6,29.5l-1.1,1.1c-0.1,0.1-0.3,0.2-0.5,0.2s-0.4-0.1-0.5-0.2l-10-10c-0.1-0.1-0.2-0.3-0.2-0.5c0-0.2,0.1-0.4,0.2-0.5
                             	l10-10c0.1-0.1,0.3-0.2,0.5-0.2s0.4,0.1,0.5,0.2l1.1,1.1c0.1,0.1,0.2,0.3,0.2,0.5c0,0.2-0.1,0.4-0.2,0.5L4.1,20l8.5,8.5
                             	c0.1,0.1,0.2,0.3,0.2,0.5S12.8,29.3,12.6,29.5z M25.3,6.5l-8,27.8c-0.1,0.2-0.2,0.3-0.3,0.4s-0.3,0.1-0.5,0.1l-1.3-0.4
