--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </div>
               <div class="col-md-8">
               <h2>Frontend Web&nbsp;Developer</h2>
-              <p>I am focused on the field of frontend web development. I live in JavaScript and open source technologies. My goal is to obtain remote web development opportunities and/or part-time/contract employment.</p>
+              <p>Focused on the field of frontend web development. I live in JavaScript and open source technologies. My goal is to obtain remote web development opportunities and/or part-time/contract employment.</p>
               <p>For over 2 decades I worked with a variety of teams to design and build sites that address business and user needs. I manage sites in higher ed and have in the nutritional supplement industry as well. I strive to create usable, polished and performant products through passionate and deliberate design.</p>
               <p>I live in Kankakee Illinois. I enjoy music, oil painting, and single malt whiskey.</p>
                 <p>Contact me or reach out via LinkedIn or send an email.</p>
